<resources>
    <string name="app_name">KA_PI_2</string>
    <string name="Total_time">總時間(s)</string>
    <string name="Temperate">溫度(°C)</string>
    <string name="beanName">豆名</string>
    <string name="scale">比例</string>
    <string name="degree">研磨度</string>
    <string name="tool">沖泡器具</string>
    <string name="g">g</string>
    <string name="store">儲存</string>
    <string name="bean">豆</string>
    <string name="water">水</string>
    <string name="v60">取名自60度角的構造，是一個非常受歡迎的沖煮器具，沖出來的咖啡風味一致性高並且有著乾淨的風味特性。使用中細研磨刻度，在悶蒸之後，注水以同心圓方式在咖啡粉床上繞圈，你可能可以試試看以點滴注水法沖煮，分批注入少量的水。\n</string>
    <string name="v602">選V60的理由：如果你想要有乾淨風味的咖啡，也想自行嘗試調整沖煮參數，而且願意接受它的沖煮難度。\n</string>
    <string name="kalita">濾杯的底部較平且有三個小孔，這會影響水的流速，讓水在流出濾杯前可以停留在濾杯底部，反之這會讓沖煮出來的咖啡穩定性與容錯率更高。建議沖煮方式就跟V60一樣，適合的研磨度為中偏細。\n</string>
    <string name="kalita2">選Kalita Wave的理由：如果你偏好容錯率更高的沖煮方式，可以試試看這種濾杯。</string>
    <string name="chemx1">Chemex濾杯就視覺上來看非常吸睛，在紐約的現代藝術博物館中展出，最棒的是它過濾咖啡的功能，因為保留了咖啡中的油脂，所以煮出來的咖啡會比較醇厚。在沖煮時較難維持一致性。跟手沖不同的是研磨度建議適用中粗研磨。\n</string>
    <string name="chemx2">選Chemex的理由：想要一次沖煮出超過一人份的咖啡，但口感一致性的沖煮結果並非你首要考量。</string>
    <string name="brewers1">可以設置水溫的變化應對在控制萃取上建議以中度研磨的粗細沖煮，但依照型號的推陳出新，還是依機器建議的研磨粗細沖煮。\n</string>
    <string name="brewers2">選Batch Brewer的理由：你想要一次煮出品質穩定的咖啡給許多人，而且你不介意多花一些錢在這個設備，或是犧牲手沖過程帶來的樂趣。</string>
    <string name="sma1">結合了過濾與浸泡功能，濾杯底部有一個活閥，可以使咖啡粉與水充分浸泡來萃取咖啡，當停止浸泡時只要打開活閥就可以過濾出咖啡液，建議使用中度研磨。\n</string>
    <string name="sma2">選聰明濾杯的理由：你想要同時品嚐到浸泡與過濾咖啡的滋味，或是你很注重沖煮的穩定性。</string>
    <string name="fr1">最簡單的一種沖煮器具，法式濾壓壺常被喝精品咖啡的人所輕視沖泡完成時要輕輕倒出咖啡，如果動作太粗魯，會讓萃取完的細粉留在咖啡中繼續萃取，而萃取後段會溶出更多苦味物質，導致咖啡變難喝。通常建議會用粗研磨度沖泡，\n</string>
    <string name="fr2">選法式濾壓壺的理由：你想要一杯醇厚的咖啡，而且偏好簡單的沖泡方法。</string>
    <string name="l1">愛樂壓對初學者來說非常容易上手。</string>
    <string name="l2">分為兩種沖煮方式：反轉沖煮法以及正壓沖煮法。\n</string>
    <string name="m1">濃縮咖啡跟手沖或浸泡法的沖煮方式完全不同：把粉放上沖煮把手的濾杯前，必須先將咖啡粉磨得很細，經過填壓後，在很短的時間沖煮出咖啡，非常適合用來調整沖煮配方。\n</string>
    <string name="m2">選咖啡機的理由：你真的很愛濃縮咖啡，而且不在意花費較高的金額購買。</string>
    <string name="mo1">摩卡壺是設計來做為用爐子加熱的濃縮咖啡機，然而摩卡壺無法跟咖啡機一樣在沖煮時製造這麼多壓力，而壓力對濃縮咖啡的萃取非常重要。使用常溫水的話會導致咖啡粉跟加熱的金屬接觸太久。\n</string>
    <string name="mo2">選摩卡壺的理由：你想要咖啡喝起來像濃縮咖啡，而不想花太多錢買設備。</string>
    <string name="soc1">如果有沖煮器具讓你在煮咖啡時看起來像個科學家，那就是虹吸壺。它結合了浸泡與過濾，包含了加熱火源、玻璃沖煮器以及科學的原理，通常煮出來的咖啡口感較飽滿。\n</string>
    <string name="soc2">選虹吸壺的理由：你不嫌製作工序麻煩，喜歡口感飽滿又乾淨的風味，並想要秀面十足的沖煮過程。</string>
    <string name="tur1">加入水和糖（糖可加可不加）到壺中並置於爐上或埋入熱沙中。當沸騰時加入咖啡粉，等煮到上升至壺的頂端時快速移開火源，在置於火源上，重複三次動作後就可以享用咖啡！\n</string>
    <string name="tur2">選土耳其壺的理由：你想要體驗土耳其壺的文化，而且喜歡苦味或加糖的咖啡，也不怕沖煮上帶來的麻煩。</string>
    <string name="wat1">在18世紀由荷蘭人發明了水洗法的技術。由於在一些國家常常下雨、濕度又高，根本無法實行日曬法，所以雖然過程相對較繁瑣，但卻是目前最為廣泛使用的處理方式。與日曬法最大的不同是利用發酵來去除果膠層。</string>
    <string name="sun1">日曬法是咖啡豆最古老、最原始的處理法，相較於水洗法，這種乾燥處理法的咖啡又稱為「自然咖啡」或「日曬咖啡」，將採收的咖啡果實直接在陽光下曝曬約兩週至四週的時間。一般是氣候乾濕較分明的國家會使用這種方式。</string>
    <string name="wet1">濕刨法是蘇門答臘比較常見的一種處理法呢！\n</string>
    <string name="wet2">在豆體潮濕鬆軟，含水率高達30-35%時，就脫去內果皮（羊皮紙），讓生豆表面直接暴露出來，再繼續曬乾，以便解決乾燥時間過長的困境。這種做法由於乾燥時間縮短至兩到四天而已，咖啡豆的發酵期縮短，酸度也跟著降低許多，相對的濃厚度卻增加，焦糖與果香味明顯，甚至帶有藥草或青草香氣以及木質的氣味，這是蘇門答臘特有的「地域之味」。\n</string>
    <string name="bee1">在咖啡豆去掉外層的果肉之後，會有層黏稠狀的膠狀物。 蜜處理過程容易受到污染和黴害，需要全程嚴密看管，不斷翻動，加速乾燥，以避免產生不良的發酵味。它的好處在於能最好地保存咖啡熟果的原始甜美風味，令咖啡呈現淡雅的黑糖風味及核果香甜，而漿果風味亦支撐出紅酒基調的香氣，被認為是非常優雅的出品。</string>
    <string name="red">是紅處理法最極致的表現，將咖啡果實的水果香氣和甜感發揮到淋漓盡致。處理的時後一不小心就會發酵過度，所以需要大量的人工進行果實的照顧和篩選，必須挑選有到達紅寶石標準的果實才能稱之為紅寶石咖啡豆，因此在反覆的篩選和淘汰之後，數量極為稀少。\n</string>
    <string name="sol">2013年獨創SolkilnTM特殊處理法，利用木材乾燥室，乾燥咖啡豆。木頭砍筏過後，通常都會至於木材的乾燥室透過溫度、濕度和空氣循環的控制和調 節，降低木頭生豆含水量至10-12%。Joseph Brodsky正是利用與這相同的概念，創造這新的SolkilnTm (SK)殊處理法，並在2013年正式推出Lotus Solkiln H2、Silvia Solkiln N2兩款頂級生豆產品。</string>
</resources>
